--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Barberia Coder House</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Antonio:wght@100&family=Nunito:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/material-icon.css">
     <script defer src="js/stock.js"></script>
@@ -39,7 +40,7 @@
                 <li class="nav-item">
                   <a class="nav-link" id="boton-carrito" data-bs-toggle="offcanvas" href="#shopingCart" role="button" aria-controls="shopingCart">
                     <span class="material-icons-round text-white">shopping_cart</span>
-                    <div class="countCart"><span id="countCart">0</span></div>
+                    <div class="countCart"><span class="d-none" id="countCart">0</span></div>
                   </a>
                 </li>
               </ul>
@@ -169,6 +170,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
     <!-- <script src="js/script.js"></script> -->
     <!-- <script src="js/reserva.js"></script> -->
 </body>
